# Process-Scheduling-Sim

./: .gitignore  CMakeLists.txt  README.md  algos.c  algos.h  gui.c  gui.h  heap.h  main.c  pclass.h  quantum.rc  reader.c  sample2gen.csv  sort.c  sort.h
include/: algos.h  gantt.h  gl_graphs.h  pclass.h  reader.h
src/: algos.c  gantt.c  gen_process_csv.py  generator.c  generator.h  gl_graphs.c  gl_graphs.h  gui.c  gui.h  heap.c  pclass.h  quantum.rc  reader.c  sample.csv  sort.c
